apps/media/transmission-movies/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-movies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission-movies
  template:
    metadata:
      labels:
        app: transmission-movies
    spec:
      containers:
      - name: transmission-movies
        image: haugene/transmission-openvpn
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - name: data-volume
          mountPath: /data
        - name: config-volume
          mountPath: /config
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: transmission-movies-data
      - name: config-volume
        persistentVolumeClaim:
          claimName: transmission-movies-config
