apps/media/transmission-movies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-movies-rajsingh-info-tls
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
    item.homer.rajsingh.info/Logo: https://transmissionbt.com/assets/images/Transmission_icon.png
    item.homer.rajsingh.info/Name: "Transmission Movies"
spec:
  ingressClassName: haproxy
  rules:
  - host: transmission-movies.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission-movies
            port:
              number: 9091
  tls:
  - secretName: transmission-movies-rajsingh-info-tls
    hosts:
    - transmission-movies.rajsingh.info
